tests/snapshots/complex_nested_empty-2.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: true
snapshot_kind: text
---
maybe_vec_maybe&
matrix=&
map_of_vecs=&
vec_of_maps=&
complex_tuple=
