tests/snapshots/complex_nested_empty-3.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: false
snapshot_kind: text
---
maybe_vec_maybe=&
matrix[0]=&
map_of_vecs=&
vec_of_maps[0]=&
nested_option=&
complex_tuple[0][0]=empty&
complex_tuple[0][1]=
