tests/snapshots/complex_nested_empty-4.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: true
snapshot_kind: text
---
maybe_vec_maybe=&
matrix%5B0%5D=&
map_of_vecs=&
vec_of_maps%5B0%5D=&
complex_tuple%5B0%5D%5B0%5D=empty&
complex_tuple%5B0%5D%5B1%5D=
