tests/snapshots/complex_nested_empty.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: false
snapshot_kind: text
---
maybe_vec_maybe&
matrix=&
map_of_vecs=&
vec_of_maps=&
complex_tuple=
