tests/snapshots/complex_nested_empty@form-2.snap
---
source: tests/test_roundtrip.rs
description: "ComplexNested { maybe_vec_maybe: Some([]), matrix: [[]], map_of_vecs: {}, vec_of_maps: [{}], complex_tuple: [(\"empty\", Some([]))] }"
---
maybe_vec_maybe=&
matrix%5B0%5D=&
map_of_vecs=&
vec_of_maps%5B0%5D=&
complex_tuple%5B0%5D%5B0%5D=empty&
complex_tuple%5B0%5D%5B1%5D=
