tests/snapshots/complex_nested_empty@form.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
snapshot_kind: text
---
maybe_vec_maybe&
matrix=&
map_of_vecs=&
vec_of_maps=&
complex_tuple=
