tests/snapshots/complex_nested_empty@query.snap
---
source: tests/test_roundtrip.rs
description: "ComplexNested { maybe_vec_maybe: None, matrix: [], map_of_vecs: {}, vec_of_maps: [], complex_tuple: [] }"
---

